--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
 
 <!-- Load style sheets -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="shared.css">
+<link rel="stylesheet" href="addPlantComponent.css">
 
 <!-- Load any supplemental Javascript libraries here -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.2/seedrandom.js"></script>
