Important change to shared.css

--- a/profile.html
+++ b/profile.html
@@ -29,14 +29,16 @@
 <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>-->
 
 <script src="profile.js"></script>
-    
+<!-- add util.js   -->
 </head>
 
 <body>
 
 <div class="wrapper"> 
+    <div id="breadcrumb">Breadcrumb</div>
     <div id="heading">
         <div id="photo">Photo</div>
+        <div id="star">Stars</div>
         <div id="name">Name</div>
         <div id="edit">Edit</div>
     </div>
