One more fix to shared.css

--- a/profile.html
+++ b/profile.html
@@ -14,8 +14,9 @@
 
 <!-- Load style sheets -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="shared.css">
 <link rel="stylesheet" href="profile.css">
-<link rel="stylesheet" href="shared.css">
+
 
 <!-- Load any supplemental Javascript libraries here -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.2/seedrandom.js"></script>
@@ -35,11 +36,11 @@
 <body>
 
 <div class="wrapper"> 
-    <div id="breadcrumb">Breadcrumb</div>
+    <div id="breadcrumb"><a href="">Breadcrumb</a></div>
     <div id="heading">
         <div id="photo">Photo</div>
         <div id="star">Stars</div>
-        <div id="name">Name</div>
+        <div id="name" class="font-big text-primary">Name</div>
         <div id="edit">Edit</div>
     </div>
     <div id="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
