--- a/profile.html
+++ b/profile.html
@@ -38,13 +38,38 @@
 <div class="wrapper"> 
     <div id="breadcrumb"><a href="">Breadcrumb</a></div>
     <div id="heading">
-        <div id="photo">Photo</div>
-        <div id="star">Stars</div>
-        <div id="name" class="font-big text-primary">Name</div>
-        <div id="edit">Edit</div>
+        <div id="photo">
+<!--            <img src="img/user.png">-->
+        </div>
+        <div id="star">
+<!--
+            <span class="fas fa-star text-green"></span>
+            <span class="fas fa-star text-green"></span>
+            <span class="fas fa-star text-green"></span>
+            <span class="fas fa-star text-green"></span>
+            <span class="fas fa-star text-green"></span>
+-->
+        </div>
+        <div id="name" class="font-big text-primary">Jane Doe</div>
+        <div id="edit">
+<!--            <button class="btn btn-light"><span class="fas fa-pencil-alt fa-2x"></span></button>-->
+        </div>
     </div>
-    <div id="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-    <div id="calendar">Calendar</div>
+    <div id="content">
+        <div id="phone-icon"><span class="fas fa-phone fa-2x margin-right text-primary"></span></div>
+        <div id="phone-text">Phone number</div>
+        <div id="phone"></div>
+        <div id="email-icon"><span class="fas fa-envelope fa-2x margin-right text-primary"></span></div>
+        <div id="email-text">Email Address</div>
+        <div id="email"></div>
+        <div id="description-icon"><span class="fas fa-comment-alt fa-2x margin-right text-primary"></span></div>
+        <div id="description-text">Description</div>
+        <div id="description"></div>
+    </div>
+    <div id="calendar">
+        <div id="calendar-main">Calendar</div>
+        <div id="add-event">Add Event</div>
+    </div>
 </div>
 
 </body>
