user registered plants displayed, action button functionality added

--- a/homepage.html
+++ b/homepage.html
@@ -10,27 +10,29 @@
     <link rel="stylesheet" href="plant.css">
     <script src="util.js"></script>
     <script src="helperFunctions.js"></script>
+    <script src="registeredPlants.js"></script>
     <script src="plant.js"> </script>
     <script src="addPlantComponent.js"></script>
     <script src="plantComponent.js"> </script>
+    <script src="homepage.js"></script>
 
   </head>
 
   <body>
 
   <div class="container-fluid">
+
+    <nav></nav>
+
     <div class="row">
 
       <div class="col col-md-2">
       </div>
 
       <div class="col col-md-10">
-
-      <div id="board_container" class = "row">
-
-
-    </div>
-  </div>
+        <div id="board_container" class = "row">
+        </div>
+      </div>
 
     </div>
   </div>
