plant function buttons added - functionality yet not supported

--- a/homepage.html
+++ b/homepage.html
@@ -29,8 +29,39 @@
       <div class="col col-md-2">
       </div>
 
-      <div class="col col-md-10">
+      <div class="col col-md-8">
         <div id="board_container" class = "row">
+        </div>
+      </div>
+
+      <div class="col cold-md-2">
+
+
+        <div class = "row justify-content-md-center">
+          <div id ="plant_functions_container" >
+            <button type="button" class="btn btn-secondary btn-block btn-lg plant-function">Add plant</button>
+
+            <button type="button" id="temp_care_button" class="btn btn-secondary btn-block btn-lg plant-function" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" disabled>
+              Put up for temp care
+            </button>
+            <div class="collapse" id="collapseExample">
+                <div >
+                    sth
+                </div>
+            </div>
+            <label> Want to give away your plant?
+            <button type="button" id="adoption_button" class="btn btn-danger btn-block btn-lg plant-function" disabled>Put up for adoption</button>
+            </label>
+          </div>
+
+
+
+
+
+
+
+
+
         </div>
       </div>
 
