Using JSON for registered users now

--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
 
 <!-- Load style sheets -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="shared.css">
+<link rel="stylesheet" href="shared.css">
 <link rel="stylesheet" href="profile.css">
 
 
@@ -29,7 +29,9 @@
 <!--above is needed to use font awesome-->
 <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>-->
 
+<script src="registeredUsers.js"></script>
 <script src="profile.js"></script>
+
 <!-- add util.js   -->
 </head>
 
