--- a/profile.html
+++ b/profile.html
@@ -16,6 +16,10 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="shared.css">
 <link rel="stylesheet" href="profile.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+<link href='lib/fullcalendar.min.css' rel='stylesheet' />
+<link href='lib/fullcalendar.print.min.css' rel='stylesheet' media='print' />
+
 
 
 <!-- Load any supplemental Javascript libraries here -->
@@ -23,14 +27,19 @@
 
 <!-- Constructible EventTarget polyfill — Only Chrome 64+ supports constructible EventTarget objects natively -->
 <script src="https://unpkg.com/event-target@latest/min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src='lib/jquery.min.js'></script>
+    <script src='lib/moment.min.js'></script>
+    <script src='lib/fullcalendar.min.js'></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 <!--above is needed to use font awesome-->
 <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>-->
-
 <script src="registeredUsers.js"></script>
 <script src="profile.js"></script>
+
+
+
 
 <!-- add util.js   -->
 </head>
@@ -68,10 +77,11 @@
         <div id="description-text">Description</div>
         <div id="description"></div>
     </div>
-    <div id="calendar">
-        <div id="calendar-main">Calendar</div>
-        <div id="add-event">Add Event</div>
+    <div id="calendar-outer">
+        <div id="calendar"></div>
+        <div id="add-event"></div>
     </div>
+    <div style='clear:both'></div>
 </div>
 
 </body>
