Code is cleaned

--- a/profile.html
+++ b/profile.html
@@ -81,7 +81,7 @@
         <div id="calendar"></div>
         <div id="add-event"></div>
     </div>
-    <div style='clear:both'></div>
+<!--    <div style='clear:both'></div>-->
 </div>
 
 </body>
