--- a/profile.html
+++ b/profile.html
@@ -39,6 +39,7 @@
 <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>-->
 <script src="registeredUsers.js"></script>
 <script src="profile.js"></script>
+<script src="util.js"></script>
 
 
 
