Navbar almost done

--- a/addPlantTest.html
+++ b/addPlantTest.html
@@ -48,107 +48,12 @@
 
     <div style="padding:20px">
         <h2>Overlay with Text</h2>
-<!--        <button onclick="createAddPlantOverlay()">Add Plant</button>-->
-        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#exampleModalCenter">Open Modal</button> 
+        <button onclick="createAddPlantOverlay()">Add Plant</button>
+<!--        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#exampleModalCenter">Open Modal</button> -->
     </div>
     
 </div>
 
-    
-    <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header" hidden="true">
-        <h5 class="modal-title" id="exampleModalLongTitle" >Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-<!--        <div id="box">-->
-        <div id="photo">
-        <button class="btn btn-info">
-            <span class="fas fa-camera fa-5x"></span>
-        </button>
-        </div>
-        <div id="plant-name" class="formgroup">
-            <div class="formtext">Nickname</div>
-            <div class="forminput">
-                <input type="text" class="form-control" id="name" placeholder="Plant Nickname">
-            </div>
-        </div>
-        <div id="plant-type" class="formgroup">
-            <div class="formtext">
-                <span class="fas fa-leaf fa-2x margin-right text-green"></span>
-                <div>Type</div>
-            </div>
-            <div class="forminput">
-                <input type="text" class="form-control" id="type" placeholder="Plant Type (eg. orchid, rose)">
-            </div>
-        </div>
-        <div id="watering" class="formgroup">
-            <div class="formtext"><span class="fas fa-tint fa-2x margin-right text-aqua"></span>Watering Frequency</div>
-            <div class="forminput">
-<!--                call insert checks-->
-            </div>
-            <div class="forminput-small">
-<!--                call insert radios-->
-            </div>
-        </div>
-        <div id="fertilizer">
-             <div class="formtext"><span class="fas fa-poo fa-2x margin-right text-brown"></span>Fertilizer Frequency</div>
-            <div class="forminput">
-<!--                call insert checks-->
-            </div>
-            <div class="forminput-small">
-<!--                call insert radios-->
-            </div>
-        </div>
-        <div id="pesticide">
-            <div class="formtext"><span class="fas fa-bug fa-2x margin-right text-gray"></span>Pesticide Frequency</div>
-            <div class="forminput">
-<!--                call insert checks-->
-            </div>
-            <div class="forminput-small">
-<!--                call insert radios-->
-            </div>
-        </div>
-        <div id="health" class="formgroup">
-            <div class="formtext"><span class="fas fa-heartbeat fa-2x margin-right text-red"></span>Health Status</div>
-            <div class="forminput">
-<!--            call insert radios-->
-            </div>
-        </div>
-        <div id="sunlight">
-            <div class="formtext"><span class="fas fa-lightbulb fa-2x margin-right text-yellow"></span>Light Intensity</div>
-            <div class="forminput">
-<!--            call insert radios-->
-            </div>
-        </div>
-        <div id="trimming">
-            <div class="formtext"><span class="fas fa-cut fa-2x margin-right"></span>Requires Trimming</div>
-            <div class="forminput">
-<!--            call insert radios-->
-            </div>
-        </div>
-        <div id="special-instructions" class="formgroup">
-            <div class="formtext-small"><span class="fas fa-info-circle fa-2x margin-right text-orange"></span></div>
-            <div class="forminput"><input type="text" class="form-control" id="special-instructions" placeholder="Special Instructions">
-            </div>
-        </div>
-        <div id="save">
-            <button class="btn btn-primary" onclick="go()"><span class="fas fa-plus-circle fa-3x"></span></button>
-        </div>
-<!--    </div>-->
-      </div>
-      <div class="modal-footer" hidden="true">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
 </body>
 
 </html>
