final commit to master before switching to branch

--- a/navbarTest.html
+++ b/navbarTest.html
@@ -57,15 +57,15 @@
         <a class="nav-link" href="#">PlantSit</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"><span class="fas fa-bell"></span></a>
+        <a class="nav-link" href="#"><span class="fas fa-bell fa-2x"></span></a>
       </li>
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="username" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Gandalf
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#"><span class="fas fa-id-card"></span>Profile and Calendar</a>
-          <a class="dropdown-item" href="#">Photos by Volunteers</a>
+          <a class="dropdown-item" href="#"><span class="fas fa-id-card fa-2x margin-right"></span>Profile and Calendar</a>
+          <a class="dropdown-item" href="#"><span class="fas fa-camera fa-2x margin-right"></span>Photos by Volunteers</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Signout</a>
         </div>
