--- a/navbarTest.html
+++ b/navbarTest.html
@@ -67,7 +67,7 @@
           <a class="dropdown-item" href="#"><span class="fas fa-id-card fa-2x margin-right"></span>Profile and Calendar</a>
           <a class="dropdown-item" href="#"><span class="fas fa-camera fa-2x margin-right"></span>Photos by Volunteers</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Signout</a>
+          <a class="dropdown-item" href="#"><span class="fas fa-sign-out-alt fa-2x margin-right"></span>Signout</a>
         </div>
       </li>
     </ul>
