overlay functionality added

--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,12 @@
     <script src="helperFunctions.js"></script>
     <script src="registeredPlants.js"></script>
     <script src="plant.js"> </script>
+
+    <!--  for the add plant overlay -->
+    <link rel="stylesheet" href="addPlantComponent.css">
+    <link rel="stylesheet" href="shared.css">
     <script src="addPlantComponent.js"></script>
+
     <script src="plantComponent.js"> </script>
     <script src="plantManipulationComponent.js"></script>
     <script src="homepage.js"></script>
