--- a/homepage.html
+++ b/homepage.html
@@ -12,9 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha18/css/tempusdominus-bootstrap-4.min.css" />
     <link rel="stylesheet" href="navbarComponent.css">
 
-
     <script src="registeredUsers.js"></script>
     <script src="navbarComponent.js"></script>
+
+    <link rel="stylesheet" href="searchFilterComponent.css">
+    <script src="searchFilterComponent.js"></script>
+
 
     <link rel="stylesheet" href="plant.css">
     <script src="util.js"></script>
@@ -35,15 +38,22 @@
 
   <body>
 
-  <div class="container-fluid">
 
 
     <div class="row">
 
-      <div class="col col-md-2">
+      <div class="col col-md-2 ">
+        <div id="search_filter_container">
+
+
+        </div>
+
+      </div>
+      <div class="col col-md-1">
+
       </div>
 
-      <div class="col col-md-8">
+      <div class="col col-md-7">
         <div id="board_container" class = "row">
         </div>
       </div>
@@ -105,6 +115,5 @@
       </div>
 
     </div>
-  </div>
   </body>
 </html>
