--- a/homepage.html
+++ b/homepage.html
@@ -42,18 +42,20 @@
 
     <div class="row">
 
-      <div class="col col-md-2 ">
-        <div id="search_filter_container">
+      <div class="col col-md-3">
+           <div id="search_filter_container">
 
 
-        </div>
+        </div> 
 
       </div>
+<!--
       <div class="col col-md-1">
 
       </div>
+-->
 
-      <div class="col col-md-7">
+      <div class="col col-md-7 margin-left">
         <div id="board_container" class = "row">
         </div>
       </div>
