horizontal scrolling fixed

--- a/homepage.html
+++ b/homepage.html
@@ -40,7 +40,7 @@
 
 
 
-    <div class="row">
+    <div class="row set-width">
 
       <div class="col col-md-3">
            <div id="search_filter_container">
