search filter bug removed

--- a/profile.html
+++ b/profile.html
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-  <div id="breadcrumb"><a href="">Breadcrumb</a></div>
+  <div id="breadcrumb" ><a class="green-link" href="">Breadcrumb</a></div>
 
 <div class="wrapper">
     <div id="heading">
