Almost done with plant profile editing

--- a/plant-profile.html
+++ b/plant-profile.html
@@ -48,10 +48,10 @@
 <body>  
     <div id="breadcrumb" ><a class="green-link" href="">Breadcrumb</a></div>
     <div class = "container g-pad" id="plantprofilecontent"> 
-        <div class="row">
+        <div class="row g-pad">
             <div class="col-sm-3" id="g-photo"><img src="img/plant4.png"></div>
             <div class="col-sm-6">
-                <div class="row"><span class="text-center" id="g-plantname">Plant Name</span></div>
+                <div class="row font-big text-info"><span class="text-center" id="g-plantname">Plant Name</span></div>
                 <div class="row">
                     <span class="text-center">
                         <span class="fas fa-leaf fa-2x margin-right text-green"></span>
@@ -71,9 +71,9 @@
                         <span class="fas fa-tint fa-2x text-aqua"></span>
                     </div>
                     <div class="col-sm-2">Watering Frequency</div>
-                    <div class="col-sm-6 weekday" id="g-watering">
+                    <div class="col-sm-6 weekday eliminate-padding-left" id="g-watering">
                     </div>
-                    <div class="col-sm-3" id="g-watering-freq"></div>
+                    <div class="col-sm-3 eliminate-padding-left" id="g-watering-freq"></div>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -82,7 +82,7 @@
                         <span class="fas fa-heartbeat fa-2x margin-right text-red"></span>
                     </div>
                     <div class="col-sm-6">Health Status</div>
-                    <div class="col-sm-4" id="g-healthstatus">
+                    <div class="col-sm-4 eliminate-padding-left" id="g-healthstatus">
                     </div>
                 </div>
             </div>
@@ -94,9 +94,9 @@
                         <span class="fas fa-poo fa-2x margin-right text-brown"></span>
                     </div>
                     <div class="col-sm-2">Fertilizer Frequency</div>
-                    <div class="col-sm-6 weekday" id="g-fertilizer">
+                    <div class="col-sm-6 weekday eliminate-padding-left" id="g-fertilizer">
                     </div>
-                    <div class="col-sm-3" id="g-fertilizer-freq"></div>
+                    <div class="col-sm-3 eliminate-padding-left" id="g-fertilizer-freq"></div>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -105,7 +105,7 @@
                         <span class="fas fa-lightbulb fa-2x margin-right text-yellow"></span>
                     </div>
                     <div class="col-sm-6">Light Intensity</div>
-                    <div class="col-sm-4" id="g-light"></div>
+                    <div class="col-sm-4 eliminate-padding-left" id="g-light"></div>
                 </div>
             </div>
         </div>
@@ -116,9 +116,9 @@
                         <span class="fas fa-bug fa-2x margin-right text-gray"></span>
                     </div>
                     <div class="col-sm-2">Pesticide Frequency</div>
-                    <div class="col-sm-6 weekday" id="g-pesticide">
+                    <div class="col-sm-6 weekday eliminate-padding-left" id="g-pesticide">
                     </div>
-                    <div class="col-sm-3" id="g-pesticide-freq"></div>
+                    <div class="col-sm-3 eliminate-padding-left" id="g-pesticide-freq"></div>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -127,7 +127,7 @@
                         <span class="fas fa-cut fa-2x margin-right"></span>
                     </div>
                     <div class="col-sm-6">Requires Trimming</div>
-                    <div class="col-sm-4" id="g-trimming"></div>
+                    <div class="col-sm-4 eliminate-padding-left" id="g-trimming"></div>
                 </div>
             </div>
         </div>
