--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
         </div>
         <div id="star">
         </div>
-        <div id="name" class="font-big text-primary"></div>
+        <div id="name" class="font-big text-info"></div>
         <div id="edit">
 <!--            <button class="btn btn-light"><span class="fas fa-pencil-alt fa-2x"></span></button>-->
         </div>
