--- a/plant-profile.html
+++ b/plant-profile.html
@@ -39,7 +39,7 @@
 <script src="registeredPlants.js"></script>
     
       <!--  for the add plant overlay -->
-    <link rel="stylesheet" href="addPlantComponent.css">
+<!--    <link rel="stylesheet" href="addPlantComponent.css">-->
     <link rel="stylesheet" href="shared.css">
     <script src="addPlantComponent.js"></script>
     
