--- a/adopt.html
+++ b/adopt.html
@@ -31,7 +31,7 @@
     <script src="plantManipulationComponent.js"></script>
 
     <link rel="stylesheet" href="plantsit-adopt.css" />
-    <script src="plantsit.js"></script>
+    <script src="adopt.js"></script>
 
 
   </head>
