Breadcrumbs removed, goto default photo for plant profile, form validation for user profile

--- a/plant-profile.html
+++ b/plant-profile.html
@@ -46,10 +46,10 @@
 </head>
 
 <body>  
-    <div id="breadcrumb" ><a class="green-link" href="">Breadcrumb</a></div>
+<!--    <div id="breadcrumb" ><a class="green-link" href="">Breadcrumb</a></div>-->
     <div class = "container g-pad" id="plantprofilecontent"> 
         <div class="row g-pad">
-            <div class="col-sm-3" id="g-photo"><img src="img/plant4.png"></div>
+            <div class="col-sm-3" id="g-photo"></div>
             <div class="col-sm-6">
                 <div class="row font-big text-info"><span class="text-center" id="g-plantname">Plant Name</span></div>
                 <div class="row">
