--- a/profile.html
+++ b/profile.html
@@ -55,7 +55,7 @@
 </head>
 
 <body>
-  <div id="breadcrumb" ><a class="green-link" href="">Breadcrumb</a></div>
+<!--  <div id="breadcrumb" ><a class="green-link" href="">Breadcrumb</a></div>-->
 
 <div class="wrapper">
     <div id="heading">
