--- a/signup.html
+++ b/signup.html
@@ -56,33 +56,33 @@
                         <div class="card-body">
                             <form class="needs-validation" id="formSignUp" novalidate>
                                 <div class="form-group">
-                                    <label for="email"><span class="fas fa-at fa-lg margin-right text-gray"></span>Email</label>
+                                    <label for="email" class="required-label"><span class="fas fa-at fa-lg margin-right text-gray"></span>Email</label>
                                     <input type="email" class="form-control form-control-lg rounded-0" name="email" id="email" required placeholder="example@gmail.com">
                                     <div class="invalid-feedback">Please enter a valid email</div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="pws1"><span class="fas fa-key fa-lg margin-right text-gray"></span>Password</label>
+                                    <label for="pws1" class="required-label"><span class="fas fa-key fa-lg margin-right text-gray"></span>Password</label>
                                     <input type="password" class="form-control form-control-lg rounded-0" id="pwd1" required autocomplete="new-password">
                                     <div class="invalid-feedback">Enter your password too!</div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="pwd2"><span class="fas fa-key fa-lg margin-right text-gray"></span>Re-enter Password</label>
+                                    <label for="pwd2" class="required-label"><span class="fas fa-key fa-lg margin-right text-gray"></span>Re-enter Password</label>
                                     <input type="password" class="form-control form-control-lg rounded-0" id="pwd2" required autocomplete="new-password" oninput="checkPassword(this)">
                                     <div class="invalid-feedback">Re-enter your password</div>
                                 </div>
                                 <div class="form-row">
                                     <div class="col-md-6 mb-3">
                                       <label for="firstname"><span class="fas fa-user-circle fa-lg margin-right text-gray"></span>First name</label>
-                                      <input type="text" class="form-control form-control-lg rounded-0" id="firstname" placeholder="John" required>
+                                      <input type="text" class="form-control form-control-lg rounded-0" id="firstname" placeholder="John" required pattern="^[A-z]+$">
                                       <div class="invalid-feedback">
-                                        Oops you forgot this!
+                                        Please enter alphabets!
                                       </div>
                                     </div>
                                     <div class="col-md-6 mb-3">
                                       <label for="lastname"><span class="fas fa-user-circle fa-lg margin-right text-gray"></span>Last name</label>
-                                      <input type="text" class="form-control form-control-lg rounded-0" id="lastname" placeholder="Doe" required>
+                                      <input type="text" class="form-control form-control-lg rounded-0" id="lastname" placeholder="Doe" required pattern="^[A-z]+$">
                                       <div class="invalid-feedback">
-                                        Forgot this too!
+                                        Alphabets only!
                                       </div>
                                     </div>
                                 
