Converted profile to bootstrap format

--- a/plant-profile.html
+++ b/plant-profile.html
@@ -65,13 +65,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-sm-8 g-min-max-width">
                 <div class="row">
                     <div class="col-sm-1">
                         <span class="fas fa-tint fa-2x text-aqua"></span>
                     </div>
                     <div class="col-sm-2">Watering Frequency</div>
-                    <div class="col-sm-6 weekday eliminate-padding-left" id="g-watering">
+                    <div class="col-sm-6 weekday" id="g-watering">
                     </div>
                     <div class="col-sm-3 eliminate-padding-left" id="g-watering-freq"></div>
                 </div>
@@ -88,13 +88,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-sm-8 g-min-max-width">
                 <div class="row">
                     <div class="col-sm-1">
                         <span class="fas fa-poo fa-2x margin-right text-brown"></span>
                     </div>
                     <div class="col-sm-2">Fertilizer Frequency</div>
-                    <div class="col-sm-6 weekday eliminate-padding-left" id="g-fertilizer">
+                    <div class="col-sm-6 weekday" id="g-fertilizer">
                     </div>
                     <div class="col-sm-3 eliminate-padding-left" id="g-fertilizer-freq"></div>
                 </div>
@@ -110,13 +110,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-sm-8 g-min-max-width">
                 <div class="row">
                     <div class="col-sm-1">
                         <span class="fas fa-bug fa-2x margin-right text-gray"></span>
                     </div>
                     <div class="col-sm-2">Pesticide Frequency</div>
-                    <div class="col-sm-6 weekday eliminate-padding-left" id="g-pesticide">
+                    <div class="col-sm-6 weekday" id="g-pesticide">
                     </div>
                     <div class="col-sm-3 eliminate-padding-left" id="g-pesticide-freq"></div>
                 </div>
