--- a/index.html
+++ b/index.html
@@ -1,121 +1,140 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
-
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha18/js/tempusdominus-bootstrap-4.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha18/css/tempusdominus-bootstrap-4.min.css" />
-    <link rel="stylesheet" href="navbarComponent.css">
-
-    <script src="registeredUsers.js"></script>
-    <script src="navbarComponent.js"></script>
-
-    <link rel="stylesheet" href="searchFilterComponent.css">
-    <script src="searchFilterComponent.js"></script>
-
-    <script src="plant.js"> </script>
-
-    <link rel="stylesheet" href="plant.css">
-    <script src="util.js"></script>
-    <script src="helperFunctions.js"></script>
-    <script src="registeredPlants.js"></script>
-
-    <!--  for the add plant overlay -->
-    <link rel="stylesheet" href="addPlantComponent.css">
-    <link rel="stylesheet" href="shared.css">
-    <script src="addPlantComponent.js"></script>
-
-    <script src="plantComponent.js"> </script>
-    <script src="plantManipulationComponent.js"></script>
-    <script src="homepage.js"></script>
-
-  </head>
-
-  <body>
-
-
-
-    <div class="row set-width">
-
-      <div class="col col-md-3">
-           <div id="search_filter_container">
-
-
-        </div>
-
-      </div>
+<!DOCTYPE html>
 <!--
-      <div class="col col-md-1">
-
-      </div>
+---- PlantSitter
+---- By: Geeticka Chauhan
 -->
+<html>
 
-      <div class="col col-md-6 margin-left">
-        <div id="board_container" class = "row">
-        </div>
-      </div>
+<head>
+<meta charset="utf-8">
+<title>Login</title>
 
-      <div class="col cold-md-3">
+<!-- Use mobile-aware viewport -->
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<!-- Load style sheets -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+<link rel="stylesheet" href="login.css">
+<link rel="stylesheet" href="shared.css">
+
+<!-- Load any supplemental Javascript libraries here -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.2/seedrandom.js"></script>
+
+<!-- Constructible EventTarget polyfill — Only Chrome 64+ supports constructible EventTarget objects natively -->
+<script src="https://unpkg.com/event-target@latest/min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+<!--above is needed to use font awesome-->
+<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>-->
+
+<!--<script src="navbarComponent.js"></script>-->
+<script src="util.js"></script>
+<script src="registeredUsers.js"></script>
+<script src="login.js"></script>
 
 
-        <div class = "row justify-content-md-center">
-          <div id ="plant_functions_container" class = "col col-md-9">
-            <button type="button" class="btn btn-secondary btn-block btn-lg plant-function">
-              <i class="fas fa-plus-circle"></i> Add plant</button>
+</head>
 
-            <button type="button" id="temp_care_button" class="btn btn-secondary btn-block btn-lg plant-function" data-toggle="collapse" data-target="#collapseFunctionForm" aria-expanded="false" disabled>
-              Put up for temp care
-            </button>
-            <div class="collapse" id="collapseFunctionForm">
+<body>
 
-              <form>
 
-              <div class="form-group">
-                <label for="start_date_picker">From:</label>
-                <div class="input-group date" id="start_date_picker" data-target-input="nearest">
-                  <input type="text" class="form-control datetimepicker-input" data-target="#start_date_picker"/>
-                  <div class="input-group-append" data-target="#start_date_picker" data-toggle="datetimepicker">
-                      <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+<!--    from https://www.codeply.com/go/nhbdi2FkJm/bootstrap-4-login-form-->
+<!--    and https://getbootstrap.com/docs/4.0/components/forms/#custom-styles-->
+   <div class="container py-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center text-green mb-4"><span class="fab fa-pagelines fa-lg margin-right"></span>PlantSitter</h1>
+            <div class="row">
+                <div class="col-md-6 mx-auto col-sm-10">
+
+                    <!-- form card login -->
+                    <div class="card rounded-0">
+                        <div class="card-header">
+                            <h3 class="mb-0 text-center">Login</h3>
+                        </div>
+                        <div class="card-body">
+                            <form class="needs-validation" id="formLogin" novalidate>
+                                <div class="form-group">
+                                    <label for="email" class="required-label"><span class="fas fa-at fa-lg margin-right text-gray"></span>Email</label>
+                                    <input type="email" class="form-control form-control-lg rounded-0" name="email" id="email" placeholder="example@gmail.com" required>
+                                    <div class="invalid-feedback">Please enter a valid email</div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="required-label"><span class="fas fa-key fa-lg margin-right text-gray"></span>Password</label>
+                                    <input type="password" class="form-control form-control-lg rounded-0" id="pwd1" required autocomplete="new-password">
+                                    <div class="invalid-feedback">Enter your password too!</div>
+                                </div>
+                                <div>
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="checkbox" name="checkbox" id="checkbox" value="rememberme">
+                                      <label class="form-check-label" for="checkbox">
+                                        <span class="custom-control-description small text-dark">Remember me</span>
+                                      </label>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-success btn-lg float-right" id="btnLogin"><span class="fas fa-sign-in-alt fa-lg"></span></button>
+                            </form>
+                        </div>
+
+                        <!--/card-block-->
+                    </div>
+                    <div class="alert alert-danger hidden" role="alert">
+                    Found no user with the provided email and password.
                   </div>
+                    <!-- /form card login -->
 
                 </div>
-              </div>
-
-
-              <div class="form-group">
-                <label for="end_date_picker">To:</label>
-                <div class="input-group date" id="end_date_picker" data-target-input="nearest">
-                  <input type="text" class="form-control datetimepicker-input" data-target="#end_date_picker"/>
-                  <div class="input-group-append" data-target="#end_date_picker" data-toggle="datetimepicker">
-                      <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                  </div>
-
-                </div>
-              </div>
-
-
-              <input id="temp_care_confirm" class="btn btn-primary" type="submit" value="Confirm" disabled>
-
-            </form>
 
 
             </div>
-
-            <label id="adoption_label" for= "adoption_button"> Want to give away your plant? </label>
-            <button type="button" id="adoption_button" class="btn btn-danger btn-block btn-lg plant-function" disabled>Put up for adoption</button>
-
-          </div>
-
-
+            <!--/row-->
 
         </div>
-      </div>
-
+        <!--/col-->
     </div>
-  </body>
+    <!--/row-->
+
+
+    <div class="row login-pad-top">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-6 mx-auto">
+
+                    <!-- form card login -->
+                    <div class="card rounded-0">
+                        <div class="card-body">
+
+                            <div class="row">
+
+                            <div class="col-sm-6">
+                            <h3 class="mb-0">New?</h3></div>
+                            <div class="col-sm-6">
+                                <button type="submit" class="btn btn-danger btn-lg float-right" id="btnSignup"><span class="fas fa-user-plus margin-right"></span>Sign Up</button>
+                            </div>
+                        </div>
+                            </div>
+                        <!--/card-block-->
+                    </div>
+                    <!-- /form card login -->
+
+                </div>
+
+
+            </div>
+            <!--/row-->
+
+        </div>
+        <!--/col-->
+    </div>
+    <!--/row-->
+</div>
+<!--/container-->
+
+
+</body>
+
 </html>
