Added the delete button

--- a/plant-profile.html
+++ b/plant-profile.html
@@ -138,7 +138,12 @@
             <div class="col-sm-2">Special Instructions</div>
             
             <div class="col-sm-8" id="g-specialinstructions"></div>
-        </div>
+            <div class="col-sm-1">
+                <span class="float-right">
+                    <button class="btn btn-danger g-display-none" id="g-delete-button"><span class="fas fa-trash-alt fa-lg"></span></button>
+                </span>
+            </div>
+        </div>  
     </div>
 
  
