--- a/signup.html
+++ b/signup.html
@@ -69,14 +69,14 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="col-md-6 mb-3">
-                                      <label for="firstname"><span class="fas fa-user-circle fa-lg margin-right text-gray"></span>First name</label>
+                                      <label for="firstname" class="required-label"><span class="fas fa-user-circle fa-lg margin-right text-gray"></span>First name</label>
                                       <input type="text" class="form-control form-control-lg rounded-0" id="firstname" placeholder="John" required pattern="^[A-z]+$">
                                       <div class="invalid-feedback">
                                         Please enter alphabets!
                                       </div>
                                     </div>
                                     <div class="col-md-6 mb-3">
-                                      <label for="lastname"><span class="fas fa-user-circle fa-lg margin-right text-gray"></span>Last name</label>
+                                      <label for="lastname" class="required-label"><span class="fas fa-user-circle fa-lg margin-right text-gray"></span>Last name</label>
                                       <input type="text" class="form-control form-control-lg rounded-0" id="lastname" placeholder="Doe" required pattern="^[A-z]+$">
                                       <div class="invalid-feedback">
                                         Alphabets only!
