--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,7 @@
 
     <div class="row set-width">
 
-      <div class="col col-md-3">
+      <div class="col col-sm-3">
            <div id="search_filter_container">
 
 
@@ -60,11 +60,11 @@
         </div>
       </div>
 
-      <div class="col cold-md-3">
+      <div class="col col-md-3">
 
 
-        <div class = "row justify-content-md-center">
-          <div id ="plant_functions_container" class = "col col-md-9">
+        <div class = "row justify-content-sm-center">
+          <div id ="plant_functions_container" class = "col col-sm-9">
             <button type="button" class="btn btn-secondary btn-block btn-lg plant-function">
               <i class="fas fa-plus-circle"></i> Add plant</button>
 
