--- a/plant-profile.html
+++ b/plant-profile.html
@@ -88,69 +88,69 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8 g-min-max-width">
+            <div class="col-sm-8 g-min-max-width mb-4">
                 <div class="row">
                     <div class="col-sm-1">
                         <span class="fas fa-tint fa-2x text-aqua"></span>
                     </div>
                     <div class="col-sm-2">Watering Frequency</div>
-                    <div class="col-sm-6 weekday" id="g-watering">
+                    <div class="col-sm-6 weekday eliminate-padding-right" id="g-watering">
                     </div>
-                    <div class="col-sm-3 eliminate-padding-left" id="g-watering-freq"></div>
+                    <div class="col-sm-3" id="g-watering-freq"></div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 mb-4">
                 <div class="row">
                     <div class="col-sm-2">
                         <span class="fas fa-heartbeat fa-2x margin-right text-red"></span>
                     </div>
-                    <div class="col-sm-6">Health Status</div>
-                    <div class="col-sm-4 eliminate-padding-left" id="g-healthstatus">
+                    <div class="col-sm-6 eliminate-padding-right">Health Status</div>
+                    <div class="col-sm-4" id="g-healthstatus">
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8 g-min-max-width">
+            <div class="col-sm-8 g-min-max-width mb-4">
                 <div class="row">
                     <div class="col-sm-1">
                         <span class="fas fa-poo fa-2x margin-right text-brown"></span>
                     </div>
                     <div class="col-sm-2">Fertilizer Frequency</div>
-                    <div class="col-sm-6 weekday" id="g-fertilizer">
+                    <div class="col-sm-6 weekday eliminate-padding-right" id="g-fertilizer">
                     </div>
-                    <div class="col-sm-3 eliminate-padding-left" id="g-fertilizer-freq"></div>
+                    <div class="col-sm-3" id="g-fertilizer-freq"></div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 mb-4">
                 <div class="row">
                     <div class="col-sm-2">
                         <span class="fas fa-lightbulb fa-2x margin-right text-yellow"></span>
                     </div>
-                    <div class="col-sm-6">Light Intensity</div>
-                    <div class="col-sm-4 eliminate-padding-left" id="g-light"></div>
+                    <div class="col-sm-6 eliminate-padding-right">Light Intensity</div>
+                    <div class="col-sm-4" id="g-light"></div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8 g-min-max-width">
+            <div class="col-sm-8 g-min-max-width mb-4">
                 <div class="row">
                     <div class="col-sm-1">
                         <span class="fas fa-bug fa-2x margin-right text-gray"></span>
                     </div>
                     <div class="col-sm-2">Pesticide Frequency</div>
-                    <div class="col-sm-6 weekday" id="g-pesticide">
+                    <div class="col-sm-6 weekday eliminate-padding-right" id="g-pesticide">
                     </div>
-                    <div class="col-sm-3 eliminate-padding-left" id="g-pesticide-freq"></div>
+                    <div class="col-sm-3" id="g-pesticide-freq"></div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 mb-4">
                 <div class="row">
                     <div class="col-sm-2">
                         <span class="fas fa-cut fa-2x margin-right"></span>
                     </div>
-                    <div class="col-sm-6">Requires Trimming</div>
-                    <div class="col-sm-4 eliminate-padding-left" id="g-trimming"></div>
+                    <div class="col-sm-6 eliminate-padding-right">Requires Trimming</div>
+                    <div class="col-sm-4" id="g-trimming"></div>
                 </div>
             </div>
         </div>
